# IHM_PER_QT

./: .gitignore  CMakeLists.txt  ProyectoPER.pro  README.md  TODO.txt  todo.txt
data/: problems.json  users.json
include/: chartscene.h  chartview.h  compassitem.h  distanceitem.h  logindialog.h  mainwindow.h  problemmanager.h  profiledialog.h  protractoritem.h  registerdialog.h  resultsdialog.h  ruleritem.h  usermanager.h
resources/: app_resources.qrc
src/: chartscene.cpp  chartview.cpp  compassitem.cpp  distanceitem.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  navigation.cpp  navigationdao.cpp  problemmanager.cpp  profiledialog.cpp  protractoritem.cpp  registerdialog.cpp  resultsdialog.cpp  ruleritem.cpp  usermanager.cpp
styles/: lightblue.qss  modern_dark.qss  modern_light.qss
ui/: mainwindow.ui
